      [Contributed by Dan Bailey and SideFX]
    - Added a slider to the Remove Divergence SOP to set the error tolerance
      for the pressure solver.
    - The Extended Operator Info window in Houdini 16 now renders correctly
      for OpenVDB SOPs, instead of displaying a Python stack trace.
      [Contributed by Dan Bailey]


Version 4.0.1 - March 8, 2017

    New features:
    - Added functions to util/logging.h to simplify configuration of the
      logging system (via command-line arguments, in particular).
    - Added LeafManager::activeLeafVoxelCount(), a faster, threaded
      alternative to Tree::activeLeafVoxelCount().
    - Added a -shuffle option that causes vdb_test to run unit tests
      in random order, which can help to identify unintended dependencies
      between tests.
    - Added vdb_lod, a command-line tool to generate volume mipmaps
      for level-of-detail effects.
    - Added methods to compute the median value of active, inactive or all
      voxels in leaf nodes.

    Improvements:
    - Added a Metadata::str() specialization for StringMetadata that
      eliminates the overhead of writing to a string stream.
    - Made various minor improvements to util::PagedArray.
    - Added an install_lib build target to the Makefile.
      [Contributed by Double Negative]
    - Added documentation and Cookbook examples for OpenVDB Points.
      [Contributed by Double Negative]
    - Registration of OpenVDB Points grid and attribute types is now handled
      in openvdb::initialize(), and openvdb::points::initialize() and
      openvdb::points::uninitialize() are therefore deprecated.
    - Extended multi-pass I/O to handle a variable number of passes
      per leaf node.
      [Contributed by Double Negative]
    - Addressed a name conflict between macros in util/NodeMasks.h
      and symbols in the Eigen library.
      [Reported by Trevor Thomson]

    Bug fixes:
    - tools::fillWithSpheres() and tools::ClosestSurfacePoint now correctly